@@ -293,4 +293,38 @@ cmp_deeply(
   'terse format omits errors from redundant applicator keywords',
 );
 
+
+$js = JSON::Schema::Draft201909->new(short_circuit => 0, collect_annotations => 0);
+foreach my $keyword (qw(unevaluatedItems unevaluatedProperties)) {
+  $result = $js->evaluate(
+    1,
+    { $keyword => false },
+  );
+
+  cmp_deeply(
+    $result->TO_JSON,
+    {
+      valid => bool(0),
+      errors => my $errors = [
+        {
+          instanceLocation => '',
+          keywordLocation => '/'.$keyword,
+          error => 'EXCEPTION: "'.$keyword.'" keyword present, but annotation collection is disabled',
+        },
+      ],
+    },
+    'basic format includes all errors linearly',
+  );
+
+  $result->output_format('terse');
+  cmp_deeply(
+    $result->TO_JSON,
+    {
+      valid => bool(0),
+      errors => $errors,
+    },
+    'terse format does not omit these crucial errors',
+  );
+}
+
 done_testing;
